--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux-persist": "^6.0.0",
     "redux-persistent": "^1.0.2",
     "redux-thunk": "^2.3.0",
+    "uuid": "^3.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
